--- a/src/Steganography.css
+++ b/src/Steganography.css
@@ -165,6 +165,29 @@
     font-size: 48px;
 }
 
+.container-files {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-betwen;
+    flex-direction: row;
+  }
+
+.fill-split {
+    margin-top: 2%;
+    margin-right: 2%;
+    padding-top: 2%;
+    padding-left: 5%;
+    text-align: left;
+    border: 4px outset #ccc;
+    border-radius: 15px;
+    height: 50%;
+}
+
+.radio-buttons {
+    text-align: left;
+    display:inline;
+}
+
 .container-progress-bar {
     margin-top: 3%;
 }
